# privacypass-lib

./: Dockerfile  README.md  build.sh
.github/workflows/: release.yml
src/: Cargo.toml
src/core/: Cargo.toml
src/core/src/: client.rs  crystal.rs  lib.rs  server.rs
src/ffi/: Cargo.toml  build.rs  build_android.sh  build_ios.sh  build_macos.sh  build_plugin.sh  cbindgen.toml  copy_to_plugin.sh
src/ffi/include/: kagipp_ffi.h
src/ffi/src/: lib.rs  types.rs
src/panic_handler/: Cargo.toml
src/tests/memleak/src/: kagipp.h
src/wasm/src/: client.rs
